--- a/fineroof/app/links.html
+++ b/fineroof/app/links.html
@@ -39,7 +39,7 @@
 								<img src="/template/img/eliplse1.png" alt="">
 							</div>
 							<div class="header__right">
-								<span class="green-text">г. Волжский, <br>Складской переулок, д. 2г</span>
+								<span class="green-text">г. Волжский, <br>ул. Горького, д. 41р</span>
 							</div>
 						</div>
 						<div class="header__contacts">
@@ -47,7 +47,7 @@
 								<img src="/template/img/eliplse1.png" alt="">
 							</div>
 							<div class="header__right">
-								<span class="green-text">Рабочий посёлок Средняя Ахтуба, <br> ул. Профсоюзная, д. 35</span>
+								<span class="green-text">г. Волгоград, <br> ул. К. Либкнехта, д. 8</span>
 							</div>
 						</div>
 					</div>
@@ -86,7 +86,7 @@
 							<li class="navigation__item">
 								<a href="#" class="navigation__link">Фотогалерея</a>
 								<span class="navigation__additional">
-									Реальные строительные объекты
+									Реальные <br> строительные <br> объекты
 								</span>
 							</li>
 							<li class="navigation__item">
@@ -96,7 +96,7 @@
 							<li class="navigation__item">
 								<a href="#" class="navigation__link">Youtube-канал</a>
 								<span class="navigation__additional">
-									Делимся опытом по выбору материалов
+									Делимся <br> опытом по выбору <br> материалов
 								</span>
 							</li>
 						</ul>
@@ -160,189 +160,18 @@
 		}
 	</script>
 	<main class="main">
-		<h1 class="visually-hidden">Услуги</h1>
-		<div class="inner-title">
-			<div class="container">
-				<div class="inner-title__wrap inner-title__wrap_no-border inner-title__wrap_catalog-page">
-					<div class="inner-title__services custom-title custom-title_inner custom-title_no-border custom-title_with-lane custom-title_full-house">
-						<span>Продукция.</span>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="inner-page">
-			<div class="container">
-				<div class="inner-page__wrap catalog-list">
-					<div class="catalog-list__row">
-						<div class="catalog-list__block isActive">
-							<div class="catalog-list__status">
-								<svg>
-									<use xlink:href="/template/img/catalog-icons.svg#checkbox"></use>
-								</svg>
-							</div>
-							<div class="catalog-list__top">
-								<div class="catalog-list__icon">
-									<svg>
-										 <use xlink:href="/template/img/catalog-icons.svg#catalog7"></use>
-									 </svg>
-								</div>
-								<div class="catalog-list__name">Фасадные материалы</div>
-							</div>
-							<ul class="catalog-list__list">
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>
-									Фасадные панели
-								</a></li>
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>
-									Виниловый сайдинг
-								</a></li>
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>
-									Металлический сайдинг
-								</a></li>
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>
-									Сайдинг дпк
-								</a></li>
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>
-									Фиброцементный сайдинг cedral
-								</a></li>
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>
-									Комплектующие
-								</a></li>
-							</ul>
-						</div>
-
-
-						<div class="catalog-list__block">
-							<div class="catalog-list__status">
-								<svg>
-									<use xlink:href="/template/img/catalog-icons.svg#checkbox"></use>
-								</svg>
-							</div>
-							<div class="catalog-list__top">
-								<div class="catalog-list__icon">
-									<svg>
-										<use xlink:href="/template/img/catalog-icons.svg#catalog6"></use>
-									</svg>
-								</div>
-								<div class="catalog-list__name">Скатные кровли</div>
-							</div>
-							<ul class="catalog-list__list">
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Гибкая черепица Docke Pie</a></li>
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Гибкая черепица Технониколь Shinglas</a></li>
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Металлочерепица</a></li>
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Кровельный профнастил</a></li>
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Комплектующие</a></li>
-							</ul>
-						</div>
-						<div class="catalog-list__block">
-							<div class="catalog-list__status">
-								<svg>
-									<use xlink:href="/template/img/catalog-icons.svg#checkbox"></use>
-								</svg>
-							</div>
-							<div class="catalog-list__top">
-								<div class="catalog-list__icon">
-									<svg>
-										<use xlink:href="/template/img/catalog-icons.svg#catalog2"></use>
-									</svg>
-								</div>
-								<div class="catalog-list__name">Изоляционные материалы</div>
-							</div>
-							<ul class="catalog-list__list">
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Гидро- и пароизоляция</a></li>
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>	Утеплитель стекловолоконный</a></li>
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Утеплитель базальтовый</a></li>
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Комплектующие</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="catalog-list__row">
-						<div class="catalog-list__block">
-							<div class="catalog-list__status">
-								<svg>
-									<use xlink:href="/template/img/catalog-icons.svg#checkbox"></use>
-								</svg>
-							</div>
-							<div class="catalog-list__top">
-								<div class="catalog-list__icon">
-									<svg>
-										<use xlink:href="/template/img/catalog-icons.svg#catalog1"></use>
-									</svg>
-								</div>
-								<div class="catalog-list__name">
-									Водосток
-								</div>
-							</div>
-							<ul class="catalog-list__list">
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>	Пластиковая система Docke Lux</a></li>
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Пластиковая система Docke Standart</a></li>
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Металлическая система 125х90</a></li>
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Комплектующие</a></li>
-							</ul>
-						</div>
-						<div class="catalog-list__block">
-							<div class="catalog-list__status">
-								<svg>
-									<use xlink:href="/template/img/catalog-icons.svg#checkbox"></use>
-								</svg>
-							</div>
-							<div class="catalog-list__top">
-								<div class="catalog-list__icon">
-									<svg>
-										<use xlink:href="/template/img/catalog-icons.svg#catalog4"></use>
-									</svg>
-								</div>
-								<div class="catalog-list__name">Мансардные окна</div>
-							</div>
-							<ul class="catalog-list__list">
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Мансардные окна на любой вкус</a></li>
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Комплектуюшие</a></li>
-							</ul>
-						</div>
-						<div class="catalog-list__block">
-							<div class="catalog-list__status">
-								<svg>
-									<use xlink:href="/template/img/catalog-icons.svg#checkbox"></use>
-								</svg>
-							</div>
-							<div class="catalog-list__top">
-								<div class="catalog-list__icon">
-									<svg>
-										<use xlink:href="/template/img/catalog-icons.svg#catalog5"></use>
-									</svg>
-								</div>
-								<div class="catalog-list__name">Ограждения</div>
-							</div>
-							<ul class="catalog-list__list">
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>	Профнастил</a></li>
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Металлический штакетник</a></li>
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Комплектующие</a></li>
-							</ul>
-						</div>
-
-					</div>
-					<div class="catalog-list__row catalog-list__row_width">
-						<div class="catalog-list__block">
-							<div class="catalog-list__status">
-								<svg>
-									<use xlink:href="/template/img/catalog-icons.svg#checkbox"></use>
-								</svg>
-							</div>
-							<div class="catalog-list__top">
-								<div class="catalog-list__icon">
-									<svg>
-										<use xlink:href="/template/img/catalog-icons.svg#catalog3"></use>
-									</svg>
-								</div>
-								<div class="catalog-list__name">Кровельные аксессуары</div>
-							</div>
-							<ul class="catalog-list__list">
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Вентиляция</a></li>
-								<li class="catalog-list__item"><a href='#' class='catalog-list__link'>Элементы безопасности кровли</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
+		<div class="links" style="display: flex;flex-direction: column;align-items: center;">
+			<a href="/" class="classic-button" style="margin-bottom: 10px;">Главная</a>
+			<a href="/galery.html" class="classic-button" style="margin-bottom: 10px;">Галерея</a>
+			<a href="/contacts.html" class="classic-button" style="margin-bottom: 10px;">Контакты</a>
+			<a href="/product-detail.html" class="classic-button" style="margin-bottom: 10px;">Детальная</a>
+			<a href="/products.html" class="classic-button" style="margin-bottom: 10px;">Разводящая - 1</a>
+			<a href="/products2.html" class="classic-button" style="margin-bottom: 10px;">Разводящая - 2</a>
+			<a href="/products3.html" class="classic-button" style="margin-bottom: 10px;">Разводящая - 3 (Пример хлебных крошек)</a>
+			<a href="/products4.html" class="classic-button" style="margin-bottom: 10px;">Разводящая - 4</a>
+			<a href="/products5.html" class="classic-button" style="margin-bottom: 10px;">Разводящая - 5</a>
+			<a href="/products6.html" class="classic-button" style="margin-bottom: 10px;">Разводящая - 6</a>
+			<a href="/services.html" class="classic-button" style="margin-bottom: 10px;">Услуги</a>
 		</div>
 		<div class="actions">
 			<div class="container">
@@ -404,13 +233,61 @@
 	</main>
 	<footer class="footer">
 		<div class="container">
+			<div class="footer__wrap footer__wrap_sb footer__wrap_margin">
+				<ul class="footer__list">
+					<li class="footer__item"><a href="#">Фасад    </a></li>
+					<li class="footer__item"><a href="#">Изоляция  </a></li>
+					<li class="footer__item"><a href="#">Мансардные окна  </a></li>
+					<li class="footer__item"><a href="#">Забор </a></li>
+					<li class="footer__item"><a href="#">Кровля    </a></li>
+					<li class="footer__item"><a href="#">Водосток   </a></li>
+					<li class="footer__item"><a href="#">Комплектующие    </a></li>
+					<li class="footer__item"><a href="#">Чердачные лестницы  </a></li>
+				</ul>
+				<div class="footer__right">
+					<div class="footer__address">
+						<div class="footer__icon">
+							<img src="/template/img/eliplse1.png" alt="">
+						</div>
+						<div class="footer__value">
+							<span class="green-text">г. Волжский, <br>Складской переулок, д. 2г</span>
+						</div>
+					</div>
+					<div class="footer__address">
+						<div class="footer__icon">
+							<img src="/template/img/eliplse1.png" alt="">
+						</div>
+						<div class="footer__value">
+							<span class="green-text">г. Волгоград, <br>ул. К. Либкнехта, д. 8</span>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="container">
 			<div class="footer__wrap">
 				<span>2018 Fine Roof</span>
 				<a href="mailto:help@fineroof.ru" class="footer__link border-link">
 					help@fineroof.ru
 				</a>
-				<div class="footer__social">
-					<img src="/template/img/icons-social.png" alt="">
+				<div class="footer__social social">
+					<div class="social__wrap">
+						<a href="#" class="social__item">
+							<svg>
+								<use xlink:href="/template/img/icons.svg#vk"></use>
+							</svg>
+						</a>
+						<a href="#" class="social__item">
+							<svg>
+								<use xlink:href="/template/img/icons.svg#fb"></use>
+							</svg>
+						</a>
+						<a href="#" class="social__item">
+							<svg>
+								<use xlink:href="/template/img/icons.svg#inst"></use>
+							</svg>
+						</a>
+					</div>
 				</div>
 				<a href="#" class="footer__link border-link">
 					Designed by Creative Brands
@@ -418,14 +295,54 @@
 			</div>
 		</div>
 	</footer>
-	<div class="popup js-login">
-		<div class="popup__wrap">
-			<div class="popup__cross cross js-close">
-				<svg>
-					<use xlink:href="/template/img/icons.svg#svg_cross"></use>
-				</svg>
-			</div>
-			<div class="popup__form">
+	<div class="popup jsCallbackForm">
+		<div class="popup__overlay">
+			<div class="popup__wrap">
+				<div class="popup__cross cross jsClosePopup">
+					<svg>
+						<use xlink:href="/template/img/icons.svg#cross"></use>
+					</svg>
+				</div>
+				<form class="" action="index.html" method="post">
+					<div class="popup__form">
+						<div class="popup__title custom-subtitle">
+							Оформите <br> заявку на расчет <br /> материалов
+						</div>
+						<div class="popup__text">
+							Оформите заявку и с Вами свяжется менеджер, который поможет в выборе и ответит на Ваши вопросы.
+						</div>
+						<div class="popup__row">
+							<label for="" class="popup__item text-label">
+								<input class="text-input" type="text" name="" value="" >
+								<span>Имя</span>
+							</label>
+							<label for="" class="popup__item text-label">
+								<input class="text-input" type="text" name="" value="" >
+								<span>Телефон</span>
+							</label>
+						</div>
+						<div class="popup__row">
+							<label for="" class="popup__item text-label">
+								<input class="text-input" type="text" name="" value="">
+								<span>Город</span>
+							</label>
+							<label class="popup__item text-file">
+								<input type="file" id="file" name="files" class="text-file-input visually-hidden" value="">
+								<span class="text-file__span">
+									<span>Перетащите файл</span>
+									<svg>
+										<use xlink:href="/template/img/icons.svg#attach"></use>
+									</svg>
+								</span>
+								<span class="text-file__uploaded">
+									<span class="text-file__name">
+									</span>
+								</span>
+							</label>
+						</div>
+						<input type="submit" class="big-button popup__submit" value="Отправить">
+					</div>
+				</form>
 			</div>
 		</div>
 	</div>
@@ -436,8 +353,13 @@
 	<script src="/template/js/script.js"></script>
 	<script defer src='/template/js/svg-animate.js'></script>
 	<script defer src='/template/js/utils.js'></script>
-	<script defer src='/template/js/catalog.js'></script>
+	<script defer src='/template/js/upload.js'></script>
 	<!-- <script src="/template/js/vivus.min.js"></script> -->
+	<template id="error">
+		<div class="error">
+			  <p class="error__message"></p>
+			  <button class="error__button classic-button" >Попробовать снова</button>
+		</div>
+	 </template>
 </body>
-
 </html>
