--- a/fineroof/app/products.html
+++ b/fineroof/app/products.html
@@ -259,7 +259,7 @@
 					<div class="catalog-list__detail catalog-section isActive">
 							<div class="catalog-section__top">
 								<div class="container-inner">
-									<div class="catalog-section__wrapper">
+									<div class="catalog-section__wrapper catalog-section__wrapper_brands">
 										<div class="catalog-section__title inner-subtitle">
 											Фасадные панели
 										</div>
