--- a/fineroof/app/index.html
+++ b/fineroof/app/index.html
@@ -207,7 +207,12 @@
 					<div class="catalog-slider__title custom-title custom-title_no-border custom-title_with-lane custom-title_full-house">
 						<span>Просто.</span>
 						<span>Со вкусом.</span>
-						<span>Для вас.</span>
+						<span>
+							Для вас.
+							<svg class="custom-title__svg">
+								<use xlink:href="/template/img/icons.svg#full-house"></use>
+							</svg>
+						</span>
 					</div>
 
 					<div class="catalog-slider__wrapper swiper-container" dir="ltr">
@@ -220,11 +225,17 @@
 								<img src="/template/img/arrow.png" alt="">
 							</div>
 						</div>
+						<div class="catalog-slider__heads">
+							<div class="catalog-slider__head">
+								<img src="/template/img/house-slider.png" alt="">
+							</div>
+							<div class="catalog-slider__head">
+								<img src="/template/img/house-slider.png" alt="">
+							</div>
+						</div>
 						<div class="catalog-slider__subwrap swiper-wrapper">
 							<a href="#" class="catalog-slider__item swiper-slide">
-								<div class="catalog-slider__head">
-									<img src="/template/img/house-slider.png" alt="">
-								</div>
+
 								<div class="catalog-slider__block">
 									<div class="catalog-slider__picture">
 										<img src="/template/img/slider1.png" alt="">
@@ -235,9 +246,27 @@
 								</div>
 							</a>
 							<a href="#" class="catalog-slider__item swiper-slide">
-								<div class="catalog-slider__head">
-									<img src="/template/img/house-slider.png" alt="">
+
+								<div class="catalog-slider__block">
+									<div class="catalog-slider__picture">
+										<img src="/template/img/slider1.png" alt="">
+									</div>
+									<div class="catalog-slider__name">
+										Фасадные материалы
+									</div>
 								</div>
+							</a>
+							<a href="#" class="catalog-slider__item swiper-slide">
+								<div class="catalog-slider__block">
+									<div class="catalog-slider__picture">
+										<img src="/template/img/slider1.png" alt="">
+									</div>
+									<div class="catalog-slider__name">
+										Фасадные материалы
+									</div>
+								</div>
+							</a>
+							<a href="#" class="catalog-slider__item swiper-slide">
 								<div class="catalog-slider__block">
 									<div class="catalog-slider__picture">
 										<img src="/template/img/slider1.png" alt="">
@@ -255,15 +284,26 @@
 		<div class="catalog">
 			<div class="container container_full">
 				<div class="catalog__svg catalog__svg_worker">
-					<object id='mainWorker1' class="animating jsAnimate" type="image/svg+xml" data="/template/img/icons.svg#worker1-play"></object>
+					<svg>
+						<use xlink:href="/template/img/icons.svg#worker1-play"></use>
+					</svg>
+
 				</div>
 				<div class="catalog__wrap">
 					<div class="catalog__title custom-title custom-title_with-border custom-title_not-full-house custom-title_center">
 						<span>Каталог</span>
-						<span>Продукции</span>
+						<span>
+							Продукции
+							<svg class="custom-title__svg">
+								<use xlink:href="/template/img/icons.svg#corner-house"></use>
+							</svg>
+						</span>
 					</div>
 					<div class="catalog__svg catalog__svg_hammer">
-						<object id='mainHammer' class="animating jsAnimate" type="image/svg+xml" data="/template/img/icons.svg#hammer-play"></object>
+						<svg>
+							<use xlink:href="/template/img/icons.svg#hammer-play"></use>
+						</svg>
+
 					</div>
 					<div class="catalog__wrapper">
 						 <div class="catalog__row">
