Правки страницы Продукция и правки тайтлов и свгшек на главной

--- a/fineroof/app/index.html
+++ b/fineroof/app/index.html
@@ -438,7 +438,10 @@
 						</div>
 					</div>
 					<div class="content-block__images content-block__images_left content-block__images_bottom image-block ">
-						<object id="mainFlowerObject" class='animating jsAnimate' type="image/svg+xml" data="/template/img/icons.svg#flower-play"></object>
+						<!--<object id="mainFlowerObject" class='animating jsAnimate' type="image/svg+xml" data="/template/img/icons.svg#flower-play"></object>-->
+						<svg>
+							<use xlink:href="/template/img/icons.svg#flower-play"></use>
+						</svg>
 					</div>
 				</div>
 			</div>
@@ -453,7 +456,12 @@
 						</div>
 						<div class="actions__title custom-title custom-title_with-border custom-title_not-full-house custom-title_center">
 							<span>Форма</span>
-							<span>связи</span>
+							<span>
+								связи
+								<svg class="custom-title__svg">
+									<use xlink:href="/template/img/icons.svg#corner-house"></use>
+								</svg>
+							</span>
 						</div>
 						<div class="actions__text">
 							Напишите <br> нам, мы поможем <br> с выбором
@@ -466,7 +474,12 @@
 						</div>
 						<div class="actions__title custom-title custom-title_with-border custom-title_not-full-house custom-title_center">
 							<span>Youtube</span>
-							<span>канал</span>
+							<span>
+								канал
+								<svg class="custom-title__svg">
+									<use xlink:href="/template/img/icons.svg#corner-house"></use>
+								</svg>
+							</span>
 						</div>
 						<div class="actions__text">
 							Делимся <br> опытом
