--- a/fineroof/app/products.html
+++ b/fineroof/app/products.html
@@ -562,8 +562,13 @@
 		</div>
 		<div class="actions">
 			<div class="container">
-				<div class="actions__wrap">
-					<div class="actions__item jsHoverEffect jsOpenPopup" data-target='.jsCallbackForm'>
+				<div class="actions__wrap actions__wrap_inner">
+					<div class="actions__svg actions__svg_dog">
+						<svg>
+							<use xlink:href="/template/img/common-svg.svg#worker-with-dog"></use>
+						</svg>
+					</div>
+					<div class="actions__item actions__item_full jsHoverEffect jsOpenPopup" data-target='.jsCallbackForm'>
 						<div class="actions__icon">
 							<object class="hoverDraw" type="image/svg+xml" data="/template/img/icons.svg#house-hover"></object>
 							<!-- <img src="/template/img/action1.png" alt=""> -->
@@ -577,18 +582,10 @@
 						</div>
 
 					</div>
-					<div class="actions__item jsChannel">
-						<div class="actions__icon">
-							<object type="image/svg+xml" data="/template/img/icons.svg#video-play"></object>
-						</div>
-						<div class="actions__title custom-title custom-title_with-border custom-title_not-full-house custom-title_center">
-							<span>Youtube</span>
-							<span>канал</span>
-						</div>
-						<div class="actions__text">
-							Делимся <br> опытом
-						</div>
-						<a href="#"></a>
+					<div class="actions__svg actions__svg_hammer">
+						<svg>
+							<use xlink:href="/template/img/catalog-icons.svg#worker-hammer"></use>
+						</svg>
 					</div>
 				</div>
 			</div>
