--- a/fineroof/app/index.html
+++ b/fineroof/app/index.html
@@ -283,7 +283,7 @@
 		</div>
 		<div class="catalog">
 			<div class="container container_full">
-				<div class="catalog__svg catalog__svg_worker">
+				<div class="catalog__svg catalog__svg_worker" style="-webkit-transform: translateX(-700px);-moz-transform: translateX(-700px);-ms-transform: translateX(-700px);-o-transform: translateX(-700px);transform: translateX(-700px);">
 					<svg>
 						<use xlink:href="/template/img/icons.svg#worker1-play"></use>
 					</svg>
@@ -299,7 +299,7 @@
 							</svg>
 						</span>
 					</div>
-					<div class="catalog__svg catalog__svg_hammer">
+					<div class="catalog__svg catalog__svg_hammer" style="-webkit-transform: translateX(700px);-moz-transform: translateX(700px);-ms-transform: translateX(700px);-o-transform: translateX(700px);transform: translateX(700px);">
 						<svg>
 							<use xlink:href="/template/img/icons.svg#hammer-play"></use>
 						</svg>
