Правки по каталогу и анимациям

--- a/fineroof/app/products.html
+++ b/fineroof/app/products.html
@@ -174,7 +174,7 @@
 			<div class="container">
 				<div class="inner-page__wrap catalog-list">
 					<div class="catalog-list__row">
-						<div class="catalog-list__block isActive">
+						<div class="catalog-list__block catalog-list__block_mod1 isActive">
 							<div class="catalog-list__status">
 								<svg>
 									<use xlink:href="/template/img/catalog-icons.svg#checkbox"></use>
@@ -211,7 +211,7 @@
 						</div>
 
 
-						<div class="catalog-list__block">
+						<div class="catalog-list__block catalog-list__block_mod2">
 							<div class="catalog-list__status">
 								<svg>
 									<use xlink:href="/template/img/catalog-icons.svg#checkbox"></use>
@@ -233,7 +233,7 @@
 								<li class="catalog-list__item">Комплектующие</li>
 							</ul>
 						</div>
-						<div class="catalog-list__block">
+						<div class="catalog-list__block catalog-list__block_mod3">
 							<div class="catalog-list__status">
 								<svg>
 									<use xlink:href="/template/img/catalog-icons.svg#checkbox"></use>
@@ -431,7 +431,7 @@
 					</div>
 
 					<div class="catalog-list__row">
-						<div class="catalog-list__block">
+						<div class="catalog-list__block catalog-list__block_mod4">
 							<div class="catalog-list__status">
 								<svg>
 									<use xlink:href="/template/img/catalog-icons.svg#checkbox"></use>
@@ -454,7 +454,7 @@
 								<li class="catalog-list__item">Комплектующие</li>
 							</ul>
 						</div>
-						<div class="catalog-list__block">
+						<div class="catalog-list__block catalog-list__block_mod5">
 							<div class="catalog-list__status">
 								<svg>
 									<use xlink:href="/template/img/catalog-icons.svg#checkbox"></use>
@@ -473,7 +473,7 @@
 								<li class="catalog-list__item">Комплектуюшие</li>
 							</ul>
 						</div>
-						<div class="catalog-list__block">
+						<div class="catalog-list__block catalog-list__block_mod6">
 							<div class="catalog-list__status">
 								<svg>
 									<use xlink:href="/template/img/catalog-icons.svg#checkbox"></use>
@@ -501,7 +501,7 @@
 
 
 					<div class="catalog-list__row catalog-list__row">
-						<div class="catalog-list__block">
+						<div class="catalog-list__block catalog-list__block_mod7">
 							<div class="catalog-list__status">
 								<svg>
 									<use xlink:href="/template/img/catalog-icons.svg#checkbox"></use>
